fix: search input overflow on safari

--- a/assets/styles/partials/search.scss
+++ b/assets/styles/partials/search.scss
@@ -4,6 +4,7 @@
   display: flex;
   padding-left: $space-base;
   padding-right: $space-base;
+  overflow-y: hidden;
 
   &__input {
     flex: 1 1 auto;
